# itmo-mts-recsys-2023

./: .dockerignore  .env.dist  .gitmodules  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: test.yml
evaluation/: metrics.py  visualization.py
models/: user_knn.py
notebooks/: Visualization and metrics.ipynb
notebooks/experiments/: ANN_ALS.ipynb  ann_als.ipynb  autoencoder.ipynb  dssm.ipynb  user_knn.ipynb
notebooks/experiments/ranking/: ranking_secong_stage.ipynb  tools.py  vector_base_first_stage.ipynb
service/: response.py  settings.py
service/api/: api.py  app.py  auth.py  deps.py  exception_handlers.py  exceptions.py  middlewares.py  views.py
service/api/auth/: auth_bearer.py  auth_handler.py
service/api/endpoints/: health.py  recommendations.py
service/models/: ngt_recommender.py  user_knn.py
service/pydantic_schemas/: error.py  recomendations.py
service/recsys_models/: __init__.py  ann.py  base.py  model_loader.py  offline_reco.py  popular_model.py  test.py  test_model.py  top_reco.py  user_knn.py
service/utils/: unpickler.py
tests/: conftest.py  patches.py
tests/api/: test_auth.py  test_views.py
