[tool.poetry]
name = "itmo-mts-recsys-2023"
version = "0.0.1"
description = ""
authors = ["Emiliy Feldman <feldlime@yandex.ru>"]
maintainers = ["Emiliy Feldman <feldlime@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "service" }
]

[tool.poetry.dependencies]
python = ">=3.1expo2,<3.11"
fastapi = "^0.104.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
uvloop = "^0.19.0"
gunicorn = "^21.2.0"
orjson = "^3.9.10"
httpx = "^0.25.1"
uvicorn = "^0.24.0.post1"
rectools = {extras = ["nmslib"], version = "^0.4.2"}
jupyter = "^1.0.0"
py-spy = "^0.3.14"
cattrs = "^23.2.3"
hnswlib = "^0.8.0"
annoy = "^1.17.3"
ngt = "^2.1.6"
lightfm = {git = "https://github.com/lyst/lightfm.git"}
optuna = "^3.4.0"
cupy-cuda12x = "^12.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
black = "^23.11.0"
nbqa = "^1.7.0"
pytest-mock = "^3.12.0"

[tool.black]
line-length = 120
target-version = ["py310"]

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
